--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = ststm32
 board = nucleo_f446re
 framework = mbed
-upload_protocol=mbed
-
+upload_protocol = stlink
+monitor_speed = 115200
